--- a/app.json
+++ b/app.json
@@ -17,7 +17,7 @@
       "inline"
     ],
     "website": "https://github.com/MrMKN/PROFESSOR-BOT",
-    "repository": "https://github.com/MrMKN/PROFESSOR-BOT",
+    "repository": "https://github.com/skdrono05/PROFESSOR-BOT",
     "env": {
         "BOT_TOKEN": {
             "description": "Your bot token.",
@@ -82,7 +82,7 @@
         },
         "SUPPORT_CHAT": {
             "description": "Updated Channel Username Without @ Not Chanel ID",
-            "value": "MKN_BOTZ_DISCUSSION_GROUP",
+            "value": "https://t.me/DRONO_BOTS_DISCUSSION_GROUP",
             "required": false
         },
         "IMDB": {
